# fuzzy

./: CHANGELOG.md  make_video.py  pyproject.toml  requirements.txt
notebooks/: fuzzy.ipynb
notebooks/.ipynb_checkpoints/: entrega-checkpoint.ipynb  fuzzy-checkpoint.ipynb  plots-checkpoint.ipynb  results-checkpoint.ipynb
notes/: Makefile  main.bib  main.tex
notes/res/: crisp.ipynb  linguistic-variables.ipynb
src/: brain.py  engine.py  tetris.py  utils.py
tetris/src/: brain.py  engine.py  tetris.py  utils.py
