[tool.poetry]
name = "fuzziness"
version = "0.1.0"
description = ""
authors = ["Santiago <shpotes3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-fuzzy = "^0.4.2"
numpy = "^1.19.1"
matplotlib = "^3.3.0"
gym = {extras = ["atari"], version = "^0.17.2"}

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^2.2.4"
pytest = "^6.0.1"
hypothesis = "^5.23.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
